# claude-insight

./: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WORKFLOW.md
.codex/: sandbox-allowlist.yml  worktree_init.sh
.codex/skills/debug/: SKILL.md
.codex/skills/land/: SKILL.md
.codex/skills/linear/: SKILL.md
.codex/skills/pull/: SKILL.md
.codex/skills/push/: SKILL.md
.github/workflows/: ci.yml  release.yml
.research/claude-hook-probe/: capture-hook.mjs  generate-fixtures.py  settings.json
crates/capture/: Cargo.toml
crates/capture/src/: backlog.rs  lib.rs  transcript_tailer.rs
crates/cli/: Cargo.toml
crates/cli/.claude/: settings.json
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  manager.rs
crates/storage/: Cargo.toml
crates/storage/src/: correlator.rs  fts.rs  lib.rs  maintenance.rs  normalizer.rs  raw_store.rs  schema.rs  sessions.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  causal_chain.rs  evidence.rs  keyboard.rs  lib.rs  replay.rs  search_overlay.rs  session_list.rs  timeline.rs  transcript.rs  wizard.rs
crates/tui/src/snapshots/: claude_insight_tui__keyboard__tests__render_help_overlay_snapshot.snap  claude_insight_tui__replay__tests__replay_layout_120x40_snapshot.snap  claude_insight_tui__replay__tests__replay_layout_180x50_snapshot.snap  claude_insight_tui__replay__tests__replay_layout_60x30_snapshot.snap  claude_insight_tui__session_list__tests__render_session_list_snapshot.snap  claude_insight_tui__wizard__tests__render_wizard_step1_snapshot.snap
crates/tui/src/widgets/: banner.rs  mod.rs  mood_badge.rs  progress_bar.rs  sparkline.rs  spinner.rs
crates/tui/tests/: all_views.rs
crates/tui/tests/snapshots/: all_views__evidence_json_snapshot.snap  all_views__evidence_missing_data_snapshot.snap  all_views__loading_spinner_snapshot.snap  all_views__replay_1pane_snapshot.snap  all_views__replay_2pane_snapshot.snap  all_views__replay_3pane_snapshot.snap  all_views__session_list_empty_snapshot.snap  all_views__session_list_failed_to_load_snapshot.snap  all_views__session_list_filtered_snapshot.snap  all_views__session_list_populated_snapshot.snap  all_views__timeline_selected_snapshot.snap  all_views__transcript_missing_data_snapshot.snap  all_views__transcript_tool_expanded_snapshot.snap  all_views__wizard_step1_snapshot.snap
crates/types/: Cargo.toml
crates/types/src/: hooks.rs  lib.rs  transcript.rs
docs/: CLAUDE_CODE_VISIBILITY_SYSTEM_DESIGN.md  DESIGN.md  ENGINEERING.md  TEST_PLAN.md
scripts/: generate-homebrew-formula.sh  hook-fallback.sh  package-release-assets.sh  publish-crates.sh  session-start-daemon.sh  validate-installed-binary.sh
src/: lib.rs
tests/: e2e.rs  integration.rs
tests/fixtures/hooks/: ConfigChange.json  CwdChanged.json  Elicitation.json  ElicitationResult.json  FileChanged.json  InstructionsLoaded.json  Notification.json  PermissionDenied.json  PermissionRequest.json  PostCompact.json  PostToolUse.json  PostToolUseFailure.json  PreCompact.json  PreToolUse.json  SessionEnd.json  SessionStart.json  Setup.json  Stop.json  StopFailure.json  SubagentStart.json  SubagentStop.json  TaskCompleted.json  TaskCreated.json  TeammateIdle.json  UserPromptSubmit.json  WorktreeCreate.json  WorktreeRemove.json
tests/fixtures/settings/: .mcp.json  settings.json
tests/fixtures/transcripts/: auth-failure.observed.jsonl  comprehensive.jsonl
