[package]
name = "claude-insight-workspace"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[workspace]
members = [
    "crates/types",
    "crates/storage",
    "crates/capture",
    "crates/daemon",
    "crates/cli",
    "crates/tui",
]
default-members = [
    ".",
    "crates/types",
    "crates/storage",
    "crates/capture",
    "crates/daemon",
    "crates/cli",
    "crates/tui",
]
resolver = "2"

[workspace.package]
description = "Local observability and audit tooling for Claude Code sessions."
edition = "2021"
homepage = "https://github.com/eddieran/claude-insight"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eddieran/claude-insight"
version = "0.1.0"

[workspace.dependencies]
arboard = "3"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
notify = "7"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

claude-insight-capture = { path = "crates/capture", version = "0.1.0" }
claude-insight-daemon = { path = "crates/daemon", version = "0.1.0" }
claude-insight-storage = { path = "crates/storage", version = "0.1.0" }
claude-insight-tui = { path = "crates/tui", version = "0.1.0" }
claude-insight-types = { path = "crates/types", version = "0.1.0" }

[dev-dependencies]
axum.workspace = true
claude-insight-capture.workspace = true
claude-insight-storage.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
