[package]
name = "capture"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
claude-insight-storage.workspace = true
claude-insight-types.workspace = true
fs2 = "0.4"
notify.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["formatting"] }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
