[package]
name = "claude-insight-types"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "claude_insight_types"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
